--- a/Resources/Private/Partials/ContentElements/Media/Gallery.html
+++ b/Resources/Private/Partials/ContentElements/Media/Gallery.html
@@ -5,8 +5,12 @@
     <f:variable name="columnConfig">{settings.gallery.columns.{imagecols}}</f:variable>
     <f:for each="{layoutClasses}" as="class">
         <f:variable name="allClasses">{allClasses} {class}</f:variable>
+        <f:if condition="{class} == 'is-gapless'">
+            <f:variable name="gapless" value="1" />
+        </f:if>
     </f:for>
-    <asd:data.imageVariants as="variants" variants="{variants}" multiplier="{columnConfig.multiplier}" gutters="{columnConfig.gutters}" corrections="{columnConfig.corrections}" />
+
+    <asd:data.imageVariants as="variants" variants="{variants}" multiplier="{columnConfig.multiplier}" gutters="{f:if(condition: '!{gapless}', then: '{columnConfig.gutters}')}" corrections="{columnConfig.corrections}" />
     <div class="columns is-mobile is-multiline {allClasses}">
         <f:for each="{files}" as="file" iteration="fileIteration">
             <div class="column {columnConfig.class} has-text-centered">
