--- a/Resources/Private/Templates/ContentElements/IconGroup.html
+++ b/Resources/Private/Templates/ContentElements/IconGroup.html
@@ -4,7 +4,13 @@
 
     <f:if condition="{records}">
         <f:variable name="columnConfig">{settings.gallery.columns.{data.cols}}</f:variable>
-        <asd:data.imageVariants as="variants" variants="{variants}" multiplier="{columnConfig.multiplier}" gutters="{columnConfig.gutters}" corrections="{columnConfig.corrections}" />
+        <f:for each="{layoutClasses}" as="class">
+            <f:variable name="allClasses">{allClasses} {class}</f:variable>
+            <f:if condition="{class} == 'is-gapless'">
+                <f:variable name="gapless" value="1" />
+            </f:if>
+        </f:for>
+        <asd:data.imageVariants as="variants" variants="{variants}" multiplier="{columnConfig.multiplier}" gutters="{f:if(condition: '!{gapless}', then: '{columnConfig.gutters}')}" corrections="{columnConfig.corrections}" />
         <f:switch expression="{data.table_header_position}">
             <f:case value="0">
                 <f:variable name="iconAlignClass">icon-group-left</f:variable>
@@ -20,9 +26,6 @@
             <f:case value="3"><f:variable name="iconAlignClass">icon-group-bottom</f:variable></f:case>
         </f:switch>
 
-        <f:for each="{layoutClasses}" as="class">
-            <f:variable name="allClasses">{allClasses} {class}</f:variable>
-        </f:for>
         <div class="columns is-multiline is-mobile icon-group {iconAlignClass} {allClasses}">
             <f:for each="{records}" as="item" iteration="iteration">
                 <div class="column {columnConfig.class}">
