--- a/Resources/Private/Templates/ContentElements/MenuCardList.html
+++ b/Resources/Private/Templates/ContentElements/MenuCardList.html
@@ -5,16 +5,19 @@
     <f:if condition="{menu}">
         <f:render partial="Menu/SkipNavigation" arguments="{_all}" />
         <f:variable name="columnConfig">{settings.responsiveimages.contentelements.menu_card_list.{data.cols}}</f:variable>
-        <asd:data.imageVariants as="variants" variants="{variants}" multiplier="{columnConfig.multiplier}" gutters="{columnConfig.gutters}" corrections="{columnConfig.corrections}" />
+        <f:for each="{layoutClasses}" as="class">
+            <f:variable name="allClasses">{allClasses} {class}</f:variable>
+            <f:if condition="{class} == 'is-gapless'">
+                <f:variable name="gapless" value="1" />
+            </f:if>
+        </f:for>
+        <asd:data.imageVariants as="variants" variants="{variants}" multiplier="{columnConfig.multiplier}" gutters="{f:if(condition: '!{gapless}', then: '{columnConfig.gutters}')}" corrections="{columnConfig.corrections}" />
         <f:variable name="alignClass">
             <f:switch expression="{data.table_header_position}">
                 <f:case value="1">has-text-centered</f:case>
                 <f:case value="2">has-text-right</f:case>
             </f:switch>
         </f:variable>
-        <f:for each="{layoutClasses}" as="class">
-            <f:variable name="allClasses">{allClasses} {class}</f:variable>
-        </f:for>
         <div class="columns is-multiline is-mobile card-menu card-menu-list {allClasses}">
             <f:for each="{menu}" as="page">
                 <div class="column {columnConfig.class}">
