--- a/Resources/Private/Templates/ContentElements/MenuThumbnailDir.html
+++ b/Resources/Private/Templates/ContentElements/MenuThumbnailDir.html
@@ -4,12 +4,14 @@
 
     <f:if condition="{menu}">
         <f:variable name="columnConfig">{settings.responsiveimages.contentelements.menu_thumbnail_dir.{data.cols}}</f:variable>
-        <asd:data.imageVariants as="variants" variants="{variants}" multiplier="{columnConfig.multiplier}" gutters="{columnConfig.gutters}" corrections="{columnConfig.corrections}" />
-        <f:render partial="Menu/SkipNavigation" arguments="{_all}" />
-        <f:variable name="allClasses" value="" />
         <f:for each="{layoutClasses}" as="class">
             <f:variable name="allClasses">{allClasses} {class}</f:variable>
+            <f:if condition="{class} == 'is-gapless'">
+                <f:variable name="gapless" value="1" />
+            </f:if>
         </f:for>
+        <asd:data.imageVariants as="variants" variants="{variants}" multiplier="{columnConfig.multiplier}" gutters="{f:if(condition: '!{gapless}', then: '{columnConfig.gutters}')}" corrections="{columnConfig.corrections}" />
+        <f:render partial="Menu/SkipNavigation" arguments="{_all}" />
         <div class="thumbnail-menu columns is-mobile is-multiline {allClasses}">
             <f:for each="{menu}" as="page">
                 <div class="thumbnail-menu-item column {columnConfig.class}">
