--- a/Resources/Public/Contrib/bulma-scss/base/_generic.scss
+++ b/Resources/Public/Contrib/bulma-scss/base/_generic.scss
@@ -54,6 +54,7 @@ section {
 body,
 button,
 input,
+optgroup,
 select,
 textarea {
   font-family: $body-family;
@@ -160,7 +161,7 @@ table {
     vertical-align: top;
 
     &:not([align]) {
-      text-align: left;
+      text-align: inherit;
     }
   }
 
