--- a/Resources/Public/Contrib/bulma-scss/components/_navbar.scss
+++ b/Resources/Public/Contrib/bulma-scss/components/_navbar.scss
@@ -46,6 +46,8 @@ $navbar-bottom-box-shadow-size: 0 -2px 0 0 !default;
 
 $navbar-breakpoint: $desktop !default;
 
+$navbar-colors: $colors !default;
+
 @mixin navbar-fixed {
   left: 0;
   position: fixed;
@@ -59,7 +61,7 @@ $navbar-breakpoint: $desktop !default;
   position: relative;
   z-index: $navbar-z;
 
-  @each $name, $pair in $colors {
+  @each $name, $pair in $navbar-colors {
     $color: nth($pair, 1);
     $color-invert: nth($pair, 2);
 
@@ -207,8 +209,7 @@ body {
   color: $navbar-burger-color;
 
   @include hamburger($navbar-height);
-
-  margin-left: auto;
+  @include ltr-property("margin", auto, false);
 }
 
 .navbar-menu {
@@ -289,14 +290,15 @@ a.navbar-item,
 }
 
 .navbar-link:not(.is-arrowless) {
-  padding-right: 2.5em;
+  @include ltr-property("padding", 2.5em);
 
   &::after {
     @extend %arrow;
 
     border-color: $navbar-dropdown-arrow;
     margin-top: -0.375em;
-    right: 1.125em;
+
+    @include ltr-position(1.125em);
   }
 }
 
@@ -509,12 +511,14 @@ a.navbar-item,
 
   .navbar-start {
     justify-content: flex-start;
-    margin-right: auto;
+
+    @include ltr-property("margin", auto);
   }
 
   .navbar-end {
     justify-content: flex-end;
-    margin-left: auto;
+
+    @include ltr-property("margin", auto, false);
   }
 
   .navbar-dropdown {
@@ -525,7 +529,9 @@ a.navbar-item,
     box-shadow: 0 8px 8px bulmaRgba($scheme-invert, 0.1);
     display: none;
     font-size: 0.875rem;
-    left: 0;
+
+    @include ltr-position(0, false);
+
     min-width: 100%;
     position: absolute;
     top: 100%;
@@ -537,7 +543,7 @@ a.navbar-item,
     }
 
     a.navbar-item {
-      padding-right: 3rem;
+      @include ltr-property("padding", 3rem);
 
       &:focus,
       &:hover {
@@ -578,11 +584,11 @@ a.navbar-item,
   .navbar > .container,
   .container > .navbar {
     .navbar-brand {
-      margin-left: -0.75rem;
+      @include ltr-property("margin", -0.75rem, false);
     }
 
     .navbar-menu {
-      margin-right: -0.75rem;
+      @include ltr-property("margin", -0.75rem);
     }
   }
 
