--- a/Resources/Public/Contrib/bulma-scss/elements/_progress.scss
+++ b/Resources/Public/Contrib/bulma-scss/elements/_progress.scss
@@ -4,6 +4,8 @@ $progress-border-radius: $radius-rounded !default;
 
 $progress-indeterminate-duration: 1.5s !default;
 
+$progress-colors: $colors !default;
+
 .progress {
   @extend %block;
 
@@ -35,7 +37,7 @@ $progress-indeterminate-duration: 1.5s !default;
   }
 
   // Colors
-  @each $name, $pair in $colors {
+  @each $name, $pair in $progress-colors {
     $color: nth($pair, 1);
 
     &.is-#{$name} {
@@ -74,6 +76,10 @@ $progress-indeterminate-duration: 1.5s !default;
 
     &::-moz-progress-bar {
       background-color: transparent;
+    }
+
+    &::-ms-fill {
+      animation-name: none;
     }
   }
 
