--- a/Resources/Public/Contrib/bulma-scss/form/_file.scss
+++ b/Resources/Public/Contrib/bulma-scss/form/_file.scss
@@ -11,6 +11,8 @@ $file-name-border-style: solid !default;
 $file-name-border-width: 1px 1px 1px 0 !default;
 $file-name-max-width: 16em !default;
 
+$file-colors: $form-colors !default;
+
 .file {
   @extend %unselectable;
 
@@ -20,7 +22,7 @@ $file-name-max-width: 16em !default;
   position: relative;
 
   // Colors
-  @each $name, $pair in $colors {
+  @each $name, $pair in $file-colors {
     $color: nth($pair, 1);
     $color-invert: nth($pair, 2);
 
@@ -257,7 +259,7 @@ $file-name-max-width: 16em !default;
   display: block;
   max-width: $file-name-max-width;
   overflow: hidden;
-  text-align: left;
+  text-align: inherit;
   text-overflow: ellipsis;
 }
 
@@ -266,7 +268,9 @@ $file-name-max-width: 16em !default;
   display: flex;
   height: 1em;
   justify-content: center;
-  margin-right: 0.5em;
+
+  @include ltr-property("margin", 0.5em);
+
   width: 1em;
 
   .fa {
