--- a/Resources/Public/Contrib/bulma-scss/form/_select.scss
+++ b/Resources/Public/Contrib/bulma-scss/form/_select.scss
@@ -1,3 +1,5 @@
+$select-colors: $form-colors !default;
+
 .select {
   display: inline-block;
   max-width: 100%;
@@ -13,7 +15,9 @@
       @extend %arrow;
 
       border-color: $input-arrow;
-      right: 1.125em;
+
+      @include ltr-position(1.125em);
+
       z-index: 4;
     }
   }
@@ -21,7 +25,8 @@
   &.is-rounded {
     select {
       border-radius: $radius-rounded;
-      padding-left: 1em;
+
+      @include ltr-property("padding", 1em, false);
     }
   }
 
@@ -44,7 +49,7 @@
     }
 
     &:not([multiple]) {
-      padding-right: 2.5em;
+      @include ltr-property("padding", 2.5em);
     }
 
     &[multiple] {
@@ -65,7 +70,7 @@
   }
 
   // Colors
-  @each $name, $pair in $colors {
+  @each $name, $pair in $select-colors {
     $color: nth($pair, 1);
 
     &.is-#{$name} {
@@ -125,7 +130,9 @@
 
       margin-top: 0;
       position: absolute;
-      right: 0.625em;
+
+      @include ltr-position(0.625em);
+
       top: 0.625em;
       transform: none;
     }
