[BUGFIX] Initialize $card-radius to 0 to avoid breaking change

--- a/Resources/Public/Scss/Theme/_variables.scss
+++ b/Resources/Public/Scss/Theme/_variables.scss
@@ -11,3 +11,6 @@ $black-opacity: hsla(0, 0%, 0%, 0.2) !default;
 
 // Dropdown
 $dropdown-content-z: $navbar-z + 1 !default;
+
+// Card
+$card-radius: 0 !default;
