[TASK] Add ratios 1:2 and 4:5

--- a/Resources/Private/Templates/ContentElements/Iframe.html
+++ b/Resources/Private/Templates/ContentElements/Iframe.html
@@ -13,6 +13,8 @@
             <f:case value="5">is-6by1</f:case>
             <f:case value="6">is-1by1</f:case>
             <f:case value="7">is-2by3</f:case>
+            <f:case value="8">is-1by2</f:case>
+            <f:case value="9">is-4by5</f:case>
         </f:switch>
     </f:variable>
     <f:variable name="iframe"><asd:firstIframe>{data.bodytext}</asd:firstIframe></f:variable>
