[TASK] Rework mega menu spacing

--- a/Resources/Private/Partials/Page/Navigation/Mega.html
+++ b/Resources/Private/Partials/Page/Navigation/Mega.html
@@ -11,7 +11,7 @@
             <div class="navbar-item has-dropdown is-hoverable is-mega">
                 <a href="{item_1.link}" class="navbar-link{classActive}">{item_1.title}</a>
                 <div class="navbar-dropdown">
-                    <div class="container is-fluid">
+                    <div class="container">
                         <div class="columns is-multiline">
                             <f:for each="{item_1.children}" as="item_2">
                                 <div class="column is-3-desktop is-12">
