[BUGFIX] Fix megamenu dropdown when menu is multiline

--- a/Resources/Public/Scss/Theme/_header.scss
+++ b/Resources/Public/Scss/Theme/_header.scss
@@ -5,6 +5,7 @@ header{
 
   #navbarMainMenu{
     flex-shrink: 1;
+    position: relative;
     .navbar-start, .navbar-end{
       flex-wrap: wrap;
     }
