--- a/Resources/Private/Partials/Page/Navigation/Dropdown.html
+++ b/Resources/Private/Partials/Page/Navigation/Dropdown.html
@@ -5,10 +5,15 @@
             is-active
         </f:if>
     </f:variable>
+    <f:variable name="target">
+        <f:if condition="{item_1.target}">
+            target="{item_1.target}"
+        </f:if>
+    </f:variable>
     <f:if condition="{item_1.children}">
         <f:then>
             <div class="navbar-item has-dropdown is-hoverable">
-                <a href="{item_1.link}" class="navbar-link{classActive}">{item_1.title}</a>
+                <a href="{item_1.link}" class="navbar-link{classActive}" {target}>{item_1.title}</a>
                 <div class="navbar-dropdown">
                     <f:for each="{item_1.children}" as="item_2">
                         <f:render section="sublevel" arguments="{item: item_2, currentUid: data.uid}"/>
@@ -17,7 +22,7 @@
             </div>
         </f:then>
         <f:else>
-            <a href="{item_1.link}" class="navbar-item{classActive}">{item_1.title}</a>
+            <a href="{item_1.link}" class="navbar-item{classActive}" {target}>{item_1.title}</a>
         </f:else>
     </f:if>
 </f:for>
@@ -28,10 +33,15 @@
             is-active
         </f:if>
     </f:variable>
+    <f:variable name="target">
+        <f:if condition="{item.target}">
+            target="{item.target}"
+        </f:if>
+    </f:variable>
     <f:if condition="{item.children}">
         <f:then>
             <div class="navbar-item nested has-dropdown is-hoverable">
-                <a href="{item.link}" class="navbar-link{classActive}">{item.title}</a>
+                <a href="{item.link}" class="navbar-link{classActive}" {target}>{item.title}</a>
                 <div class="navbar-dropdown">
                     <f:for each="{item.children}" as="subitem">
                         <f:render section="sublevel" arguments="{item: subitem, currentUid: data.uid}"/>
@@ -40,7 +50,7 @@
             </div>
         </f:then>
         <f:else>
-            <a href="{item.link}" class="navbar-item{classActive}">{item.title}</a>
+            <a href="{item.link}" class="navbar-item{classActive}" {target}>{item.title}</a>
         </f:else>
     </f:if>
 </f:section>
