--- a/Resources/Private/Layouts/ContentElements/Default.html
+++ b/Resources/Private/Layouts/ContentElements/Default.html
@@ -4,6 +4,7 @@
     <f:variable name="frameClass">frame-{data.frame_class}</f:variable>
     <f:variable name="typeClass">frame-type-{data.CType}</f:variable>
     <f:variable name="layoutClass">frame-layout-{data.layout}</f:variable>
+    <f:variable name="containerDesktop">{f:if(condition: "{data.frame_class} == 'desktop'", then: "is-max-desktop")}</f:variable>
     <f:variable name="backgroundClass">{f:if(condition: "{data.background_color_class} != none && {data.background_frame} == ''", then: "has-background-{data.background_color_class}")}</f:variable>
     <f:variable name="backgroundLimited">{f:if(condition: "{data.background_color_class} != none && {data.background_frame} == 'limited'", then: "is-background-limited")}</f:variable>
     <f:variable name="backgroundClassLimited">{f:if(condition: "{data.background_color_class} != none && {data.background_frame} == 'limited'", then: "has-background-{data.background_color_class}")}</f:variable>
@@ -13,7 +14,7 @@
     <div id="c{data.uid}" class="frame {frameClass} {typeClass} {layoutClass} {backgroundClass} {backgroundLimited} {spaceBeforeClass} {spaceAfterClass}">
         <f:if condition="{data.frame_class} != hero">
             <f:then>
-                <div class="container">
+                <div class="container {containerDesktop}">
                     <div class="frame-inner {backgroundClassLimited}">
                         <f:render section="Header" optional="true">
                             <f:comment>
