--- a/Resources/Public/Scss/Theme/_thumbnail-menu.scss
+++ b/Resources/Public/Scss/Theme/_thumbnail-menu.scss
@@ -5,90 +5,117 @@
 //
 // Variables
 //
+$thumbnail-menu-background: $primary !default;
+$thumbnail-menu-color: findColorInvert($thumbnail-menu-background) !default;
 
 //
 // Component
 //
 .thumbnail-menu-link {
-    display: block;
-    overflow: hidden;
-    position: relative;
-    height: 100%;
+  display: block;
+  overflow: hidden;
+  position: relative;
+  height: 100%;
 }
+
 .thumbnail-menu-link,
 .thumbnail-menu-link:hover,
 .thumbnail-menu-link:focus {
-    color: $primary-invert;
+  color: $thumbnail-menu-color;
 }
-.thumbnail-menu-image {
-    overflow: hidden;
-    height: 100%;
-    picture,
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-    &:empty{
-        padding-top: 66.6666%;
-    }
-}
-.thumbnail-menu-caption {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: rgba($primary, 0.75);
-}
-.thumbnail-menu-caption-inner {
-    padding: 1.5em;
-    text-align: center;
 
-    > *:first-child {
-        margin-top: 0;
-    }
-    > *:last-child {
-        margin-bottom: 0;
-    }
+.thumbnail-menu-image {
+  overflow: hidden;
+
+  picture,
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  &:empty {
+    padding-top: 66.6666%;
+  }
 }
-.thumbnail-menu-caption-title {
-    font-size: 1.25em;
-    margin-bottom: 0.25em;
-    font-weight: $weight-bold;
-}
-.thumbnail-menu-caption-subtitle {
-    line-height: 1.2em;
-}
-.thumbnail-menu-link {
+
+.frame-type-menu_thumbnail_dir, .frame-type-menu_thumbnail_list {
+  &.frame-layout-0 {
     .thumbnail-menu-caption {
-        transition: opacity 0.25s ease-in-out;
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
     }
-    .thumbnail-menu-image {
+
+    .thumbnail-menu-image:after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba($thumbnail-menu-background, 0.85);
+    }
+
+    .thumbnail-menu-caption-inner {
+      padding: 1.5em;
+      text-align: center;
+
+      > *:first-child {
+        margin-top: 0;
+      }
+
+      > *:last-child {
+        margin-bottom: 0;
+      }
+    }
+
+    .thumbnail-menu-caption-title {
+      font-size: 1.25em;
+      margin-bottom: 0.25em;
+      font-weight: $weight-bold;
+    }
+
+    .thumbnail-menu-caption-subtitle {
+      line-height: 1.2em;
+    }
+
+    .thumbnail-menu-link {
+      .thumbnail-menu-caption {
+        transition: opacity 0.25s ease-in-out;
+      }
+
+      .thumbnail-menu-image {
+        &:after {
+          transition: opacity 0.25s ease-in-out;
+        }
+
         picture,
         img {
-            transition: filter 0.25s ease-in-out;
-            filter: grayscale(1);
+          transition: filter 0.25s ease-in-out;
+          filter: grayscale(1);
         }
-    }
-    .thumbnail-menu-caption-title,
-    .thumbnail-menu-caption-subtitle {
-        transition: opacity 0.25s ease-in-out;
-        transition-delay: 0.25s;
-    }
-    &:hover,
-    &:focus {
-        .thumbnail-menu-caption {
-            opacity: 0.8;
-        }
+      }
+
+      &:hover,
+      &:focus {
         .thumbnail-menu-image {
-            picture,
-            img {
-                filter: none;
-            }
+          &:after {
+            opacity: 0.5;
+          }
+
+          picture,
+          img {
+            filter: none;
+          }
         }
+      }
     }
+  }
 }
+
