--- a/Resources/Public/Scss/Theme/_textmedia.scss
+++ b/Resources/Public/Scss/Theme/_textmedia.scss
@@ -1,10 +1,12 @@
+$textmedia-item-margin-bottom: 1rem !default;
+
 .textmedia{
   &-in-text-left,
   &-in-text-right,
   &-above,
   &-below{
     & .textmedia-item:first-of-type{
-      margin-bottom: 1rem;
+      margin-bottom: $textmedia-item-margin-bottom;
     }
   }
   .content{
