--- a/Resources/Public/Scss/Theme/_navbar.scss
+++ b/Resources/Public/Scss/Theme/_navbar.scss
@@ -14,12 +14,6 @@
   }
 }
 
-.navbar-link:hover:not(.is-arrowless) {
-  &::after {
-    border-color: $navbar-dropdown-item-active-color;
-  }
-}
-
 .nested.has-dropdown {
   padding: 0;
 
@@ -28,26 +22,6 @@
 
     &:not(.is-arrowless) {
       padding-right: 2.5em;
-    }
-
-    &.is-active {
-      color: $navbar-dropdown-item-active-color;
-    }
-
-    color: $navbar-dropdown-item-hover-color;
-
-    &:not(:focus):not(:hover) {
-      background-color: transparent;
-      color: $navbar-item-color;
-
-      &.is-active {
-        background-color: $navbar-dropdown-item-active-background-color;
-        color: $navbar-dropdown-item-active-color;
-
-        &:not(.is-arrowless):after {
-          border-color: $navbar-dropdown-item-active-color;
-        }
-      }
     }
   }
 }
@@ -117,6 +91,88 @@
     }
   }
 
+  // Fix hover state for nested dropdown
+  .navbar-item.has-dropdown {
+    &:focus,
+    &:hover,
+    &.is-active {
+      .navbar-link {
+        background-color: transparent;
+      }
+
+      & > .navbar-link {
+        background-color: $navbar-item-hover-background-color;
+      }
+    }
+  }
+
+  // Fix hover state for "colored" nested dropdown
+  @each $name, $pair in $navbar-colors {
+    $color: nth($pair, 1);
+    $color-invert: nth($pair, 2);
+
+    .navbar.is-#{$name} {
+      .navbar-start,
+      .navbar-end{
+        & > a.navbar-item,
+        .navbar-link {
+          &:focus,
+          &:hover,
+          &.is-active {
+            background-color: bulmaDarken($color, 5%);
+            @if variable-exists(navbar-with-backgroud-item-hover-background-color) {
+              background-color: $navbar-with-backgroud-item-hover-background-color;
+            }
+          }
+        }
+
+        .navbar-link {
+          &::after {
+            border-color: currentColor;
+          }
+        }
+      }
+
+      .navbar-item.has-dropdown:focus,
+      .navbar-item.has-dropdown:hover,
+      .navbar-item.has-dropdown.is-active {
+        .navbar-link{
+          background-color: transparent;
+          color: unset;
+        }
+        &:not(.nested) > .navbar-link{
+          background-color: bulmaDarken($color, 5%);
+          @if variable-exists(navbar-with-backgroud-item-hover-background-color) {
+            background-color: $navbar-with-backgroud-item-hover-background-color;
+          }
+          color: $color-invert;
+        }
+
+        .nested{
+          .navbar-link{
+            //&:hover{
+            //  background-color: $navbar-dropdown-item-hover-background-color;
+            //  color: $navbar-dropdown-item-hover-color;
+            //}
+
+            &:hover,
+            &:focus,
+            &.is-active{
+              background-color: $navbar-dropdown-item-hover-background-color;
+              color: $navbar-dropdown-item-hover-color;
+            }
+
+            //&:focus,
+            //&.is-active {
+            //  background-color: bulmaDarken($color, 5%);
+            //  color: $color-invert;
+            //}
+          }
+        }
+      }
+    }
+  }
+
   .navbar-item {
     &.is-active,
     &.is-hoverable:focus,
@@ -136,6 +192,20 @@
     .navbar-item {
       & > .navbar-link{
         padding: 0.375rem 1rem;
+      }
+    }
+
+    // Fix hover state for nested dropdown
+    .navbar-link{
+      &:focus,
+      &:hover {
+        background-color: $navbar-dropdown-item-hover-background-color;
+        color: $navbar-dropdown-item-hover-color;
+      }
+
+      &.is-active {
+        background-color: $navbar-dropdown-item-active-background-color;
+        color: $navbar-dropdown-item-active-color;
       }
     }
   }
